# train_mlops_dvc

./: envir.yml  pyproject.toml
